# soia-cc-example

./: .bazelignore  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  api_client.cc  api_server.cc  example.cc  example.test.cc  package-lock.json  package.json  pre_commit.sh  service_client.cc  service_start.cc  skir.yml  soia.yml  string_capitalizer.h
.github/workflows/: ci.yml
skir-src/: service.skir  user.skir
