cc_library(
    name = "skirout",
    srcs = glob(["skirout/**/*.cc"]),
    hdrs = glob(
        ["skirout/**/*.h"],
        exclude = ["skirout/**/*.testing.h"],
    ),
    deps = [
        "@skir-client//:skir",
    ],
)

cc_library(
    name = "skirout.testing",
    testonly = True,
    hdrs = glob(["skirout/**/*.testing.h"]),
    deps = [
        "@skir-client//:skir.testing",  
    ],
)

cc_library(
    name = "string_capitalizer",
    hdrs = ["string_capitalizer.h"],
    deps = [
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/types:optional",
        "@skir-client//:skir",
    ],
)

cc_binary(
    name = "example",
    srcs = ["example.cc"],
    deps = [
        ":skirout",
        ":string_capitalizer",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:optional",
        "@skir-client//:skir",
    ],
)

cc_test(
    name = "example.test",
    size = "small",
    srcs = ["example.test.cc"],
    deps = [
        ":example",
        ":skirout",
        ":skirout.testing",
        "@abseil-cpp//absl/time",
        "@skir-client//:skir",
        "@skir-client//:skir.testing",  
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "service_start",
    srcs = ["service_start.cc"],
    deps = [
        ":skirout",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@cpp-httplib//:httplib",
        "@skir-client//:skir",
    ],
)

cc_binary(
    name = "service_client",
    srcs = ["service_client.cc"],
    deps = [
        ":skirout",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/types:optional",
        "@cpp-httplib//:httplib",
        "@skir-client//:skir",
    ],
)
